@@ -4,6 +4,7 @@
 - minor parameter changes for htmldoc (html2pdf)
 - email header for server emails is now adjustable in config.php
 - on team maintenance page users are now displayed sorted : surname, prename
+- as admin you might select now the user on period log (similar to muli log) 
 - minor bugfixes
 
 2.2.8
